# lgit-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  commands.rs  main.rs  utils.rs
src/commands/: autosquash.rs  branch.rs  checkout.rs  cherry_pick.rs  delete_branch.rs  delete_branches.rs  fixup.rs  git_fallback.rs  rebase.rs
