[package]
name = "lgit"
version = "0.8.0"
edition = "2021"
authors = ["Peter Luladjiev<lgit-rs@luladjiev.com>"]
description = "CLI tool for managing git repositories"
license = "MIT"
repository = "https://github.com/Luladjiev/lgit-rs"
readme = "README.md"
keywords = ["git", "cli", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
mockall = "0.13.1"
